--- a/bundle_hadoop/src/index.html
+++ b/bundle_hadoop/src/index.html
@@ -10,7 +10,7 @@ title: Arenadata
         of petabytes</div>
     </div>
     <div class="presentation-example">
-      <div class="presentation-example__commands">
+      <div class="presentation-example__commands animate__animated animate__fadeIn animate__delay-1s">
         <pre><code class="language-sql">
         use adb;
         create table myclass(
