--- a/bundle_hadoop/src/hadoop.html
+++ b/bundle_hadoop/src/hadoop.html
@@ -5,6 +5,6 @@ title: Arenadata Hadoop
 
 <div>
   <h1>
-    <div class="testwetwet" style="height: 80vh">фывафывафыва</div>
+    <div class="testwetwet" style="height: 80vh">Hadoop</div>
   </h1>
 </div>
