--- a/bundle_hadoop/src/howto.html
+++ b/bundle_hadoop/src/howto.html
@@ -28,126 +28,156 @@ title: How to
     </div>
     <!-- content -->
     <div class="content-howto">
-      <div class="content-howto-card">
-        <div class="content-howto-card__title">
-          <a href="#">Airflow</a>
+      <a href="#">
+        <div class="content-howto-card">
+          <div class="content-howto-card__title">
+            Airflow
+          </div>
+          <div class="content-howto-card__icon">
+            <div class="apacheairflow"></div>
+          </div>
         </div>
-        <div class="content-howto-card__icon">
-          <div class="apacheairflow"></div>
+      </a>
+      <a href="#">
+        <div class="content-howto-card">
+          <div class="content-howto-card__title">
+            Flink
+          </div>
+          <div class="content-howto-card__icon">
+            <div class="flink"></div>
+          </div>
         </div>
-      </div>
-      <div class="content-howto-card">
-        <div class="content-howto-card__title">
-          <a href="#">Flink</a>
+      </a>
+      <a href="#">
+        <div class="content-howto-card">
+          <div class="content-howto-card__title">
+            Hadoop
+          </div>
+          <div class="content-howto-card__icon">
+            <div class="hadoop"></div>
+          </div>
         </div>
-        <div class="content-howto-card__icon">
-          <div class="flink"></div>
+      </a>
+      <a href="#">
+        <div class="content-howto-card">
+          <div class="content-howto-card__title">
+            HDFS
+          </div>
+          <div class="content-howto-card__icon">
+            <div class="hdfs"></div>
+          </div>
         </div>
-      </div>
-      <div class="content-howto-card">
-        <div class="content-howto-card__title">
-          <a href="#">Hadoop</a>
+      </a>
+      <a href="#">
+        <div class="content-howto-card">
+          <div class="content-howto-card__title">
+            HBase
+          </div>
+          <div class="content-howto-card__icon">
+            <div class="apachehbase"></div>
+          </div>
         </div>
-        <div class="content-howto-card__icon">
-          <div class="hadoop"></div>
+      </a>
+      <a href="#">
+        <div class="content-howto-card">
+          <div class="content-howto-card__title">
+            Hive
+          </div>
+          <div class="content-howto-card__icon">
+            <div class="hive"></div>
+          </div>
         </div>
-      </div>
-      <div class="content-howto-card">
-        <div class="content-howto-card__title">
-          <a href="#">HDFS</a>
+      </a>
+      <a href="#">
+        <div class="content-howto-card">
+          <div class="content-howto-card__title">
+            MapReduce
+          </div>
+          <div class="content-howto-card__icon">
+            <div class="apacheairflow"></div>
+          </div>
         </div>
-        <div class="content-howto-card__icon">
-          <div class="hdfs"></div>
+      </a>
+      <a href="#">
+        <div class="content-howto-card">
+          <div class="content-howto-card__title">
+            Phoenix
+          </div>
+          <div class="content-howto-card__icon">
+            <div class="apachephoenix"></div>
+          </div>
         </div>
-      </div>
-      <div class="content-howto-card">
-        <div class="content-howto-card__title">
-          <a href="#">HBase</a>
+      </a>
+      <a href="#">
+        <div class="content-howto-card">
+          <div class="content-howto-card__title">
+            Sqoop
+          </div>
+          <div class="content-howto-card__icon">
+            <div class="sqoop"></div>
+          </div>
         </div>
-        <div class="content-howto-card__icon">
-          <div class="apachehbase"></div>
+      </a>
+      <a href="#">
+        <div class="content-howto-card">
+          <div class="content-howto-card__title">
+            Solr
+          </div>
+          <div class="content-howto-card__icon">
+            <div class="solr"></div>
+          </div>
         </div>
-      </div>
-      <div class="content-howto-card">
-        <div class="content-howto-card__title">
-          <a href="#">Hive</a>
+      </a>
+      <a href="#">
+        <div class="content-howto-card">
+          <div class="content-howto-card__title">
+            Spark
+          </div>
+          <div class="content-howto-card__icon">
+            <div class="spark"></div>
+          </div>
         </div>
-        <div class="content-howto-card__icon">
-          <div class="hive"></div>
+      </a>
+      <a href="#">
+        <div class="content-howto-card">
+          <div class="content-howto-card__title">
+            TEZ
+          </div>
+          <div class="content-howto-card__icon">
+            <div class="tez"></div>
+          </div>
         </div>
-      </div>
-      <div class="content-howto-card">
-        <div class="content-howto-card__title">
-          <a href="#">MapReduce</a>
+      </a>
+      <a href="#">
+        <div class="content-howto-card">
+          <div class="content-howto-card__title">
+            YARN
+          </div>
+          <div class="content-howto-card__icon">
+            <div class="apacheairflow"></div>
+          </div>
         </div>
-        <div class="content-howto-card__icon">
-          <div class="apacheairflow"></div>
+      </a>
+      <a href="#">
+        <div class="content-howto-card">
+          <div class="content-howto-card__title">
+            Zeppelin
+          </div>
+          <div class="content-howto-card__icon">
+            <div class="zeppelin"></div>
+          </div>
         </div>
-      </div>
-      <div class="content-howto-card">
-        <div class="content-howto-card__title">
-          <a href="#">Phoenix</a>
+      </a>
+      <a href="#">
+        <div class="content-howto-card">
+          <div class="content-howto-card__title">
+            Zookeeper
+          </div>
+          <div class="content-howto-card__icon">
+            <div class="apachezookeeper"></div>
+          </div>
         </div>
-        <div class="content-howto-card__icon">
-          <div class="apachephoenix"></div>
-        </div>
-      </div>
-      <div class="content-howto-card">
-        <div class="content-howto-card__title">
-          <a href="#">Sqoop</a>
-        </div>
-        <div class="content-howto-card__icon">
-          <div class="sqoop"></div>
-        </div>
-      </div>
-      <div class="content-howto-card">
-        <div class="content-howto-card__title">
-          <a href="#">Solr</a>
-        </div>
-        <div class="content-howto-card__icon">
-          <div class="solr"></div>
-        </div>
-      </div>
-      <div class="content-howto-card">
-        <div class="content-howto-card__title">
-          <a href="#">Spark</a>
-        </div>
-        <div class="content-howto-card__icon">
-          <div class="spark"></div>
-        </div>
-      </div>
-      <div class="content-howto-card">
-        <div class="content-howto-card__title">
-          <a href="#">TEZ</a>
-        </div>
-        <div class="content-howto-card__icon">
-          <div class="tez"></div>
-        </div>
-      </div>
-      <div class="content-howto-card">
-        <div class="content-howto-card__title">
-          <a href="#">YARN</a>
-        </div>
-        <div class="content-howto-card__icon">
-          <div class="apacheairflow"></div>
-        </div>
-      </div>
-      <div class="content-howto-card">
-        <div class="content-howto-card__title">
-          <a href="#">Zeppelin</a>
-        </div>
-        <div class="content-howto-card__icon">
-          <div class="zeppelin"></div>
-        </div>
-      </div>
-      <div class="content-howto-card">
-        <div class="content-howto-card__title">
-          <a href="#">Zookeeper</a>
-        </div>
-        <div class="content-howto-card__icon">
-          <div class="apachezookeeper"></div>
-        </div>
-      </div>
+      </a>
     </div>
     <div class="found-mistake">
       <div class="found-mistake__text">
