--- a/bundle_hadoop/src/howto.html
+++ b/bundle_hadoop/src/howto.html
@@ -6,7 +6,7 @@ title: How to
   <div class="content">
     <div class="content-head">
       <div class="content-head-info">
-        <div class="content-head-info__title">How to</div>
+        <div class="content-head-info__title">How To!</div>
         <div class="content-head-info-update">
           <div class="content-head-info-update__icon">
             <div class="updated"></div>
@@ -15,12 +15,12 @@ title: How to
             Updated on 15 Sept 2021
           </div>
         </div>
-        <div class="content-head-info-pdf">
+        <!-- <div class="content-head-info-pdf">
           <a href="#" class="button-head-pdf">
             <div class="button-head-pdf-icon"></div>
             <div class="button-head-pdf__text">PDF</div>
           </a>
-        </div>
+        </div> -->
       </div>
       <div class="content-head-logo">
         <div class="head-adh"></div>
