--- a/bundle_hadoop/src/index.html
+++ b/bundle_hadoop/src/index.html
@@ -12,7 +12,7 @@ title: Arenadata
       </div>
     </div>
     <div class="presentation-example">
-      <div class="
+      <!-- <div class="
           presentation-example__commands
           animate__animated animate__fadeIn animate__delay-1s
         ">
@@ -24,7 +24,7 @@ title: Arenadata
         degree double(16,2)
         );
         </code></pre>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
