--- a/bundle_hadoop/src/hadoop.html
+++ b/bundle_hadoop/src/hadoop.html
@@ -16,12 +16,12 @@ title: Arenadata Hadoop
             Updated on 15 Sept 2021
           </div>
         </div>
-        <div class="content-head-info-pdf">
+        <!-- <div class="content-head-info-pdf">
           <a href="#" class="button-head-pdf">
             <div class="button-head-pdf-icon"></div>
             <div class="button-head-pdf__text">PDF</div>
           </a>
-        </div>
+        </div> -->
       </div>
       <div class="content-head-logo">
         <div class="head-adh"></div>
@@ -62,7 +62,7 @@ title: Arenadata Hadoop
               <div class="adh-content">
                 <div class="adh-content-title">
                   <div class="adh-content-title__text">
-                    Get Started
+                    Get Started1
                   </div>
                   <div class="adh-content-info">
                     <div class="adh-content-info-content">
@@ -191,7 +191,7 @@ title: Arenadata Hadoop
               <div class="adh-content">
                 <div class="adh-content-title">
                   <div class="adh-content-title__text">
-                    Get Started
+                    Get Started2
                   </div>
                   <div class="adh-content-info">
                     <div class="adh-content-info-content">
@@ -320,7 +320,7 @@ title: Arenadata Hadoop
               <div class="adh-content">
                 <div class="adh-content-title">
                   <div class="adh-content-title__text">
-                    Get Started
+                    Get Started3
                   </div>
                   <div class="adh-content-info">
                     <div class="adh-content-info-content">
