--- a/bundle_hadoop/src/defaultstart.html
+++ b/bundle_hadoop/src/defaultstart.html
@@ -29,7 +29,7 @@ title: Offline installation
       </div>
     </div>
     <!-- content -->
-    <div class="content-CONTENT">
+    <div class="content-body">
     </div>
     <div class="found-mistake">
       <div class="found-mistake__text">
