--- a/bundle_hadoop/src/howto.html
+++ b/bundle_hadoop/src/howto.html
@@ -58,7 +58,7 @@ title: How to
           </div>
         </div>
       </a>
-      <a href="#">
+      <a href="../howtohdfs.html">
         <div class="content-howto-card">
           <div class="content-howto-card__title">
             HDFS
