--- a/bundle_hadoop/src/howtohdfs.html
+++ b/bundle_hadoop/src/howtohdfs.html
@@ -27,7 +27,7 @@ title: How to HDFS
           <div class="block-howto-card" role="button" data-toggle="collapse" data-target="#block-howto1"
             aria-expanded="false" aria-controls="block-howto1">
             <div class="block-howto-card__text">
-              <a href="./airflow.html" class="">HDFS in a simple way</a>
+              <a href="./howtohadoop.html" class="">HDFS in a simple way</a>
             </div>
             <div class="card-chevron">
             </div>
