--- a/bundle_hadoop/src/adcminstall.html
+++ b/bundle_hadoop/src/adcminstall.html
@@ -445,7 +445,9 @@ title: Offline installation
           <li>Password: admin</li>
         </ul>
         <div class="content-body-image">
-          <img src="/assets/images/login-adcm.png" alt="">
+          <a class="popup-img" href="/assets/images/login-adcm.png">
+            <img src="/assets/images/login-adcm.png" alt="">
+          </a>
         </div>
         <div class="content-body-section__text">
           Later you can change the password, if necessary. To do this:
@@ -470,7 +472,9 @@ title: Offline installation
           </ol>
         </div>
         <div class="content-body-image">
-          <img src="/assets/images/2.png" alt="">
+          <a class="popup-img" href="/assets/images/2.png">
+            <img src="/assets/images/2.png" alt="">
+          </a>
         </div>
       </div>
       <h3 class="content-body__info">
@@ -503,7 +507,9 @@ title: Offline installation
                 valid one, if necessary.
               </div>
               <div class="content-body-image">
-                <img src="/assets/images/3.png" alt="">
+                <a class="popup-img" href="/assets/images/3.png">
+                  <img src="/assets/images/3.png" alt="">
+                </a>
               </div>
             </li>
             <li class="steps-content">
@@ -511,7 +517,9 @@ title: Offline installation
                 Click Save.
               </div>
               <div class="content-body-image">
-                <img src="/assets/images/4.png" alt="">
+                <a class="popup-img" href="/assets/images/4.png">
+                  <img src="/assets/images/4.png" alt="">
+                </a>
               </div>
             </li>
           </ol>
