--- a/bundle_hadoop/src/addingcomponents.html
+++ b/bundle_hadoop/src/addingcomponents.html
@@ -56,7 +56,9 @@ title: Adding components
                 or click at the icon in the column Config. Both methods lead to the opening of the cluster menu.
               </div>
               <div class="content-body-image">
-                <img src="/assets/images/addcomp1.png" alt="">
+                <a class="popup-img" href="/assets/images/addcomp1.png">
+                  <img src="/assets/images/addcomp1.png" alt="">
+                </a>
               </div>
             </li>
             <li class="steps-content">
@@ -78,7 +80,9 @@ title: Adding components
                 </div>
               </div>
               <div class="content-body-image">
-                <img src="/assets/images/addcomp2.png" alt="">
+                <a class="popup-img" href="/assets/images/addcomp2.png">
+                  <img src="/assets/images/addcomp2.png" alt="">
+                </a>
               </div>
             </li>
             <li class="steps-content">
@@ -95,7 +99,9 @@ title: Adding components
                   </div>
                 </li>
                 <div class="content-body-image">
-                  <img src="/assets/images/addcomp3.png" alt="">
+                  <a class="popup-img" href="/assets/images/addcomp3.png">
+                    <img src="/assets/images/addcomp3.png" alt="">
+                  </a>
                 </div>
                 <li class="steps-content">
                   <div class="steps-content__text">
@@ -105,7 +111,9 @@ title: Adding components
                   </div>
                 </li>
                 <div class="content-body-image">
-                  <img src="/assets/images/addcomp3.png" alt="">
+                  <a class="popup-img" href="/assets/images/addcomp3.png">
+                    <img src="/assets/images/addcomp3.png" alt="">
+                  </a>
                 </div>
               </ol>
             </li>
@@ -129,7 +137,9 @@ title: Adding components
     </li>
   </ul>
   <div class="content-body-image">
-    <img src="/assets/images/a.png" alt="">
+    <a class="popup-img" href="/assets/images/a.png">
+      <img src="/assets/images/a.png" alt="">
+    </a>
   </div>
   <ul class="custom-list-first">
     <li>If the component is mandatory, its quantitative counter contains the symbol "/". The first digit in the counter
@@ -138,7 +148,9 @@ title: Adding components
     </li>
   </ul>
   <div class="content-body-image">
-    <img src="/assets/images/b.png" alt="">
+    <a class="popup-img" href="/assets/images/b.png">
+      <img src="/assets/images/b.png" alt="">
+    </a>
   </div>
   <div class="block-tip">
     <div class="block-tip-content">
@@ -1010,7 +1022,9 @@ title: Adding components
               </div>
             </li>
             <div class="content-body-image">
-              <img src="/assets/images/addcomp4.png" alt="">
+              <a class="popup-img" href="/assets/images/addcomp4.png">
+                <img src="/assets/images/addcomp4.png" alt="">
+              </a>
             </div>
           </ol>
         </div>
@@ -1029,7 +1043,9 @@ title: Adding components
           </div>
         </div>
         <div class="content-body-image">
-          <img src="/assets/images/addcomp5.png" alt="">
+          <a class="popup-img" href="/assets/images/addcomp5.png">
+            <img src="/assets/images/addcomp5.png" alt="">
+          </a>
         </div>
       </div>
     </div>
