--- a/bundle_hadoop/src/addingservices.html
+++ b/bundle_hadoop/src/addingservices.html
@@ -43,7 +43,9 @@ title: Adding services
               </div>
             </li>
             <div class="content-body-image">
-              <img src="/assets/images/addserv1.png" alt="">
+              <a class="popup-img" href="/assets/images/addserv1.png">
+                <img src="/assets/images/addserv1.png" alt="">
+              </a>
             </div>
             <li class="steps-content">
               <div class="steps-content__text">
@@ -51,7 +53,9 @@ title: Adding services
               </div>
             </li>
             <div class="content-body-image">
-              <img src="/assets/images/addserv2.png" alt="">
+              <a class="popup-img" href="/assets/images/addserv2.png">
+                <img src="/assets/images/addserv2.png" alt="">
+              </a>
             </div>
             <li class="steps-content">
               <div class="steps-content__text">
@@ -200,7 +204,9 @@ title: Adding services
                   </li>
                 </ul>
                 <div class="content-body-image">
-                  <img src="/assets/images/addserv3.png" alt="">
+                  <a class="popup-img" href="/assets/images/addserv3.png">
+                    <img src="/assets/images/addserv3.png" alt="">
+                  </a>
                 </div>
               </div>
               <div class="block-tip">
@@ -225,7 +231,9 @@ title: Adding services
                 description of available services is listed below.
               </div>
               <div class="content-body-image">
-                <img src="/assets/images/addserv4.png" alt="">
+                <a class="popup-img" href="/assets/images/addserv4.png">
+                  <img src="/assets/images/addserv4.png" alt="">
+                </a>
               </div>
               <div class="block-tip">
                 <div class="block-tip-content">
