--- a/bundle_hadoop/src/hdfs.html
+++ b/bundle_hadoop/src/hdfs.html
@@ -65,7 +65,9 @@ title: Offline installation
           attached to the nodes they run on.
         </div>
         <div class="content-body-image">
-          <img src="/assets/images/hdfsdm.png" alt="">
+          <a class="popup-img" href="/assets/images/hdfsdm.png">
+            <img src="/assets/images/hdfsdm.png" alt="">
+          </a>
         </div>
         <div class="content-body-section__text">
           HDFS exposes a file system namespace and enables user data to be stored in files. As we said earlier, a file
