--- a/bundle_hadoop/src/datamodel.html
+++ b/bundle_hadoop/src/datamodel.html
@@ -118,7 +118,7 @@ title: Data model
           </div>
         </div>
         <div class="steps-content__code">
-          <pre><code class="language-shell">
+          <pre><code class="language-json">
             {
               "article1": {
                 "basic": {
@@ -163,6 +163,7 @@ title: Data model
               }
             }
             </code></pre>
+          <div class="steps-content-fo"></div>
           <div class="copy-button">
             <div class="copy-button-tooltip">
               <div class="copy-button-tooltip__text">Copy</div>
