--- a/bundle_hadoop/src/hadoopcliref.html
+++ b/bundle_hadoop/src/hadoopcliref.html
@@ -58,7 +58,8 @@ title: Hadoop CLI References
           Usage
         </h3>
         <div class="steps-content__code">
-          <pre><code class="language-shell">$ shellcommand [SHELL_OPTIONS] [COMMAND] [GENERIC_OPTIONS]</code></pre>
+          <pre><code class=" ">$ shellcommand [SHELL_OPTIONS] [COMMAND] [GENERIC_OPTIONS]</code></pre>
+          <div class="steps-content-fo"></div>
           <div class="copy-button">
             <div class="copy-button-tooltip">
               <div class="copy-button-tooltip__text">Copy</div>
