--- a/bundle_hadoop/src/adcminstall.html
+++ b/bundle_hadoop/src/adcminstall.html
@@ -90,7 +90,8 @@ title: Offline installation
                 Using root privileges, update all packages, currently installed in your system:
               </div>
               <div class="steps-content__code">
-                <pre><code class="language-shell">$ sudo yum update</code></pre>
+                <pre><code class=" ">$ sudo yum update</code></pre>
+                <div class="steps-content-fo"></div>
                 <div class="copy-button">
                   <div class="copy-button-tooltip">
                     <div class="copy-button-tooltip__text">Copy</div>
@@ -106,7 +107,8 @@ title: Offline installation
                 Using root privileges, install packages, required for Docker installation and using:
               </div>
               <div class="steps-content__code">
-                <pre><code class="language-shell">Lorem ipsum dolor sit amet.</code></pre>
+                <pre><code class=" ">$ sudo yum install -y yum-utils docker device-mapper-persistent-data lvm2</code></pre>
+                <div class="steps-content-fo"></div>
                 <div class="copy-button">
                   <div class="copy-button-tooltip">
                     <div class="copy-button-tooltip__text">Copy</div>
@@ -122,7 +124,8 @@ title: Offline installation
                 Start Docker:
               </div>
               <div class="steps-content__code">
-                <pre><code class="language-shell">$ sudo systemctl start docker</code></pre>
+                <pre><code class=" ">$ sudo systemctl start docker</code></pre>
+                <div class="steps-content-fo"></div>
                 <div class="copy-button">
                   <div class="copy-button-tooltip">
                     <div class="copy-button-tooltip__text">Copy</div>
@@ -138,7 +141,8 @@ title: Offline installation
                 Enable Docker as a system service:
               </div>
               <div class="steps-content__code">
-                <pre><code class="language-shell">$ sudo systemctl enable docker</code></pre>
+                <pre><code class=" ">$ sudo systemctl enable docker</code></pre>
+                <div class="steps-content-fo"></div>
                 <div class="copy-button">
                   <div class="copy-button-tooltip">
                     <div class="copy-button-tooltip__text">Copy</div>
@@ -164,7 +168,8 @@ title: Offline installation
           You can edit the file, using vi or vim command:
         </div>
         <div class="steps-content__code">
-          <pre><code class="language-shell">$ vi /etc/selinux/config</code></pre>
+          <pre><code class=" ">$ vi /etc/selinux/config</code></pre>
+          <div class="steps-content-fo"></div>
           <div class="copy-button">
             <div class="copy-button-tooltip">
               <div class="copy-button-tooltip__text">Copy</div>
@@ -178,7 +183,7 @@ title: Offline installation
           The content of the changed file should look like this:
         </div>
         <div class="steps-content__code">
-          <pre><code class="language-shell">
+          <pre><code class=" ">
             # This file controls the state of SELinux on the system.
             # SELINUX= can take one of these three values:
             #       enforcing - SELinux security policy is enforced.
@@ -189,6 +194,7 @@ title: Offline installation
             #       targeted - Only targeted network daemons are protected.
             #       strict - Full SELinux protection.
             SELINUXTYPE=targeted</code></pre>
+          <div class="steps-content-fo"></div>
           <div class="copy-button">
             <div class="copy-button-tooltip">
               <div class="copy-button-tooltip__text">Copy</div>
@@ -202,7 +208,8 @@ title: Offline installation
           You can also disable SELinux temporarily, running the following command on each host of your cluster:
         </div>
         <div class="steps-content__code">
-          <pre><code class="language-shell">$ setenforce 0</code></pre>
+          <pre><code class=" ">$ setenforce 0</code></pre>
+          <div class="steps-content-fo"></div>
           <div class="copy-button">
             <div class="copy-button-tooltip">
               <div class="copy-button-tooltip__text">Copy</div>
@@ -253,7 +260,8 @@ title: Offline installation
                 Pull a Docker Image from Arenadata Docker Registry.
               </div>
               <div class="steps-content__code">
-                <pre><code class="language-shell">$ docker pull hub.arenadata.io/adcm/adcm:latest</code></pre>
+                <pre><code class=" ">$ docker pull hub.arenadata.io/adcm/adcm:latest</code></pre>
+                <div class="steps-content-fo"></div>
                 <div class="copy-button">
                   <div class="copy-button-tooltip">
                     <div class="copy-button-tooltip__text">Copy</div>
@@ -270,7 +278,8 @@ title: Offline installation
                 All its data will be stored on the host machine in the directory /opt/adcm/.
               </div>
               <div class="steps-content__code">
-                <pre><code class="language-shell">$ docker create --name adcm -p 8000:8000 -v </code></pre>
+                <pre><code class=" ">$ docker create --name adcm -p 8000:8000 -v /opt/adcm:/adcm/data arenadata/adcm:latest</code></pre>
+                <div class="steps-content-fo"></div>
                 <div class="copy-button">
                   <div class="copy-button-tooltip">
                     <div class="copy-button-tooltip__text">Copy</div>
@@ -318,7 +327,8 @@ title: Offline installation
                 To start ADCM use the following command:
               </div>
               <div class="steps-content__code">
-                <pre><code class="language-shell">$ sudo docker start adcm</code></pre>
+                <pre><code class=" ">$ sudo docker start adcm</code></pre>
+                <div class="steps-content-fo"></div>
                 <div class="copy-button">
                   <div class="copy-button-tooltip">
                     <div class="copy-button-tooltip__text">Copy</div>
@@ -334,7 +344,8 @@ title: Offline installation
                 To stop ADCM use the following command:
               </div>
               <div class="steps-content__code">
-                <pre><code class="language-shell">$ sudo docker stop adcm</code></pre>
+                <pre><code class=" ">$ sudo docker stop adcm</code></pre>
+                <div class="steps-content-fo"></div>
                 <div class="copy-button">
                   <div class="copy-button-tooltip">
                     <div class="copy-button-tooltip__text">Copy</div>
@@ -365,7 +376,8 @@ title: Offline installation
           The command netstat — to display information about the port listening.
         </div>
         <div class="steps-content__code">
-          <pre><code class="language-shell">$ sudo netstat -ntpl | grep 8000</code></pre>
+          <pre><code class=" ">$ sudo netstat -ntpl | grep 8000</code></pre>
+          <div class="steps-content-fo"></div>
           <div class="copy-button">
             <div class="copy-button-tooltip">
               <div class="copy-button-tooltip__text">Copy</div>
@@ -379,7 +391,8 @@ title: Offline installation
           The command netstat — to display information about the port listening.
         </div>
         <div class="steps-content__code">
-          <pre><code class="language-shell">tcp6       0      0 :::8000                 :::*      </code></pre>
+          <pre><code class=" ">tcp6       0      0 :::8000                 :::*                    LISTEN                                             1514/docker-proxy-c</code></pre>
+          <div class="steps-content-fo"></div>
           <div class="copy-button">
             <div class="copy-button-tooltip">
               <div class="copy-button-tooltip__text">Copy</div>
@@ -393,7 +406,8 @@ title: Offline installation
           The command curl — to check the URL connection.
         </div>
         <div class="steps-content__code">
-          <pre><code class="language-shell">$ curl http://localhost:8000</code></pre>
+          <pre><code class=" ">$ curl http://localhost:8000</code></pre>
+          <div class="steps-content-fo"></div>
           <div class="copy-button">
             <div class="copy-button-tooltip">
               <div class="copy-button-tooltip__text">Copy</div>
@@ -407,21 +421,22 @@ title: Offline installation
           The output data should look like this:
         </div>
         <div class="steps-content__code">
-          <pre><code class="language-html">      
+          <pre><code class="">      
             &lt;!doctype html&gt;
             &lt;html lang=&quot;en&quot;&gt;
             &lt;head&gt;
             &lt;meta charset=&quot;utf-8&quot;&gt;
             &lt;title&gt;Arenadata Cluster Manager&lt;/title&gt;
             &lt;base href=&quot;/&quot;&gt;
-            <!-- &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width, initial-scale=1&quot;&gt; -->
-            <!-- &lt;link rel=&quot;icon&quot; type=&quot;image/x-icon&quot; href=&quot;assets/favicon.ico&quot;&gt; -->
-            <!-- &lt;link rel=&quot;stylesheet&quot; href=&quot;styles.10db6328264e0907c52f.css&quot;&gt;&lt;/head&gt; -->
+            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width, initial-scale=1&quot;&gt;
+            &lt;link rel=&quot;icon&quot; type=&quot;image/x-icon&quot; href=&quot;assets/favicon.ico&quot;&gt;
+            &lt;link rel=&quot;stylesheet&quot; href=&quot;styles.10db6328264e0907c52f.css&quot;&gt;&lt;/head&gt;
             &lt;body&gt;
             &lt;app-root&gt;&lt;/app-root&gt;
-            <!-- &lt;script src=&quot;runtime-es2015.7eb406ed18bf0258cd35.js&quot; type=&quot;module&quot;&gt;&lt;/script&gt;&lt;script src=&quot;runtime-es5.7eb406ed18bf0258cd35.js&quot; nomodule defer&gt;&lt;/script&gt;&lt;script src=&quot;polyfills-es5.2e224d70daec4412d3c2.js&quot; nomodule defer&gt;&lt;/script&gt;&lt;script src=&quot;polyfills-es2015.37e0553ac06970d6a5b5.js&quot; type=&quot;module&quot;&gt;&lt;/script&gt;&lt;script src=&quot;main-es2015.39851da0ebf9ed6fec45.js&quot; type=&quot;module&quot;&gt;&lt;/script&gt;&lt;script src=&quot;main-es5.39851da0ebf9ed6fec45.js&quot; nomodule defer&gt;&lt;/script&gt;&lt;/body&gt; -->
+            &lt;script src=&quot;runtime-es2015.7eb406ed18bf0258cd35.js&quot; type=&quot;module&quot;&gt;&lt;/script&gt;&lt;script src=&quot;runtime-es5.7eb406ed18bf0258cd35.js&quot; nomodule defer&gt;&lt;/script&gt;&lt;script src=&quot;polyfills-es5.2e224d70daec4412d3c2.js&quot; nomodule defer&gt;&lt;/script&gt;&lt;script src=&quot;polyfills-es2015.37e0553ac06970d6a5b5.js&quot; type=&quot;module&quot;&gt;&lt;/script&gt;&lt;script src=&quot;main-es2015.39851da0ebf9ed6fec45.js&quot; type=&quot;module&quot;&gt;&lt;/script&gt;&lt;script src=&quot;main-es5.39851da0ebf9ed6fec45.js&quot; nomodule defer&gt;&lt;/script&gt;&lt;/body&gt;
             &lt;/html&gt;   
           </code></pre>
+          <div class="steps-content-fo"></div>
           <div class="copy-button">
             <div class="copy-button-tooltip">
               <div class="copy-button-tooltip__text">Copy</div>
