--- a/bundle_hadoop/src/daemonlog.html
+++ b/bundle_hadoop/src/daemonlog.html
@@ -105,10 +105,13 @@ title: Daemonlog
           Example
         </h3>
         <div class="steps-content__code">
-          <pre><code class="language-shell">
-            $ bin/hadoop daemonlog -setlevel 127.0.0.1:9870 org.apache.
-            $ bin/hadoop daemonlog -getlevel 127.0.0.1:9870 org.apache.
-           </code></pre>
+          <pre>
+            <code class="">
+              $ bin/hadoop daemonlog -setlevel 127.0.0.1:9870 org.apache. $ bin/hadoop daemonlog -setlevel 127.0.0.1:9870org.apache. $ bin/hadoop daemonlog -getlevel 127.0.0.1:9870 org.apache.
+              $ bin/hadoop daemonlog -getlevel 127.0.0.1:9870 org.apache.
+            </code>
+         </pre>
+          <div class="steps-content-fo"></div>
           <div class="copy-button">
             <div class="copy-button-tooltip">
               <div class="copy-button-tooltip__text">Copy</div>
