--- a/bundle_hadoop/src/howtohadoop.html
+++ b/bundle_hadoop/src/howtohadoop.html
@@ -65,12 +65,13 @@ title: How To! Arenadata Hadoop
                 Add the below property in the hdfs-site.xml file:
               </div>
               <div class="steps-content__code">
-                <pre><code class="language-shell">
+                <pre><code class=" ">
                   &lt;property&gt;
                     &lt;name&gt;dfs.namenode.acls.enabled&lt;/name&gt;
                     &lt;value&gt;true&lt;/value&gt;
                     &lt;/property&gt;
                 </code></pre>
+                <div class="steps-content-fo"></div>
                 <div class="copy-button">
                   <div class="copy-button-tooltip">
                     <div class="copy-button-tooltip__text">Copy</div>
