--- a/bundle_hadoop/src/adcminstall.html
+++ b/bundle_hadoop/src/adcminstall.html
@@ -1,3 +1,7 @@
+---
+layout: has_sidebar
+title: Offline installation
+---
 <div class="page-content">
   <div class="content">
     <div class="content-head">
