--- a/bundle_hadoop/src/howtohadoop.html
+++ b/bundle_hadoop/src/howtohadoop.html
@@ -1,3 +1,7 @@
+---
+layout: has_sidebar
+title: How To! Arenadata Hadoop
+---
 <div class="page-content">
   <div class="content">
     <div class="content-head">
