--- a/bundle_hadoop/src/index.html
+++ b/bundle_hadoop/src/index.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Arenadata
+---
 <div class="head-presentation">
   <div class="presenation">
     <div class="presentation-info">
