--- a/bundle_hadoop/src/datamodel.html
+++ b/bundle_hadoop/src/datamodel.html
@@ -125,7 +125,7 @@ title: Data model
                   "author": {
                     1635250534914: "Test author"
                   },
-                  "header": {
+                  "header-first": {
                     1639000000001: "Test article. Version 3",
                       1637000000000: "Test article. Version 2",
                         1635000034534: "Test article"
@@ -151,7 +151,7 @@ title: Data model
                   "deprecated": {
                     2021000000000: true
                   },
-                  "header": {
+                  "header-first": {
                     1789000000001: "Test article2"
                   }
                 },
