--- a/bundle_hadoop/src/index.html
+++ b/bundle_hadoop/src/index.html
@@ -5,14 +5,14 @@ title: Arenadata
 <div class="head-presentation">
   <div class="presenation">
     <div class="presentation-info">
-      <div class="presentation-info__title">Arenadata Documentation</div>
+      <h1 class="presentation-info__title">Arenadata Documentation</h1>
       <div class="presentation-info__info">
         Our passion is to build efficient flexible solutions that scale up to
         dozens of petabytes
       </div>
     </div>
-    <div class="presentation-example">
-      <!-- <div class="
+    <!-- <div class="presentation-example">
+      <div class="
           presentation-example__commands
           animate__animated animate__fadeIn animate__delay-1s
         ">
@@ -24,8 +24,8 @@ title: Arenadata
         degree double(16,2)
         );
         </code></pre>
-      </div> -->
-    </div>
+      </div>
+    </div> -->
   </div>
 </div>
 <!-- <div class="search">
@@ -42,7 +42,7 @@ title: Arenadata
 </div> -->
 <div class="blocks-card">
   <div class="blocks-card-title-one">
-    <div class="blocks-card__title">Data storage software</div>
+    <h2 class="blocks-card__title">Data storage software</h2>
   </div>
   <div class="blocks-card-components">
     <div class="blocks-card-components-card">
